crates/rsjudge-utils/tests/logging_on_non_result.stderr
error[E0308]: mismatched types
  --> tests/logging_on_non_result.test:19:27
   |
19 |     let _ = log_if_error!(S);
   |             --------------^-
   |             |             |
   |             |             expected `Result<_, _>`, found `S`
   |             arguments to this function are incorrect
   |
   = note: expected enum `Result<_, _>`
            found struct `S`
note: method defined here
  --> $RUST/core/src/result.rs
   |
   |     pub fn map_err<F, O: FnOnce(E) -> F>(self, op: O) -> Result<T, F> {
   |            ^^^^^^^
help: try wrapping the expression in a variant of `Result`
   |
19 |     let _ = log_if_error!(Ok(S));
   |                           +++ +
19 |     let _ = log_if_error!(Err(S));
   |                           ++++ +
